Fix styling and spacing

--- a/src/components/index/index.scss
+++ b/src/components/index/index.scss
@@ -13,6 +13,7 @@ body {
 
   h1.pageTitle {
     font-size: 40px;
+    line-height: 125%;
     color: #c2577b;
   }
 
